# artlas

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml
.claude/: launch.json
.claude/skills/open-pr/: SKILL.md
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_trigram_indexes.py
backend/src/: main.py
backend/src/api/v1/: deps.py  router.py
backend/src/api/v1/endpoints/: artists.py  artworks.py  auth.py  map.py  museums.py  search.py  wishlist.py
backend/src/core/: config.py  exceptions.py  logging.py  security.py
backend/src/db/: base.py  session.py
backend/src/etl/: seed.py  seed_data.py  wikidata.py
backend/src/models/: __init__.py  artist.py  artwork.py  museum.py  user.py  wishlist.py
backend/src/repositories/: artist.py  artwork.py  map.py  museum.py  user.py  wishlist.py
backend/src/schemas/: artist.py  artwork.py  auth.py  common.py  map.py  museum.py  museum_detail.py  search.py  user.py  wishlist.py
backend/src/services/: auth.py  search.py
backend/tests/: conftest.py  test_auth.py
backend/tests/unit/: test_config.py  test_exceptions.py  test_security.py
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: main.tsx
frontend/src/app/: App.tsx  providers.tsx  routes.tsx
frontend/src/components/: BackLink.tsx  Footer.tsx  Icon.tsx  SmartImg.tsx  TopNav.tsx  sections.tsx
frontend/src/lib/: api.ts
(+25 files in other folders)
